[package]
name = "Nadnap"
version = "0.9.1"
description = "Nadnap - the Powerful Network Scanner"
authors = [
    "Raphaël Dray <dray@et.esiea.fr>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
regex = "1"
lazy_static = "1.4.0"