[package]
name = "Nadnap"
version = "0.22.5"
description = "Nadnap - the Powerful Network Scanner"
authors = [
    "Raphaël Dray <dray@et.esiea.fr>"
]
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/MrrRaph/Nadnap"
keywords = ["Network", "Scanner"]
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.2", features = ["wrap_help", "regex"]}
regex = "1.5.4"
lazy_static = "1.4.0"
rand = "0.8.4"